tests/compile_fail/fn_not_defined.ray
fn main() {
    not_defined();
}

